--- a/src/app/pages/chat-page/chat-page.component.html
+++ b/src/app/pages/chat-page/chat-page.component.html
@@ -1,50 +1,20 @@
 <div class="min-h-screen h-full w-full bg-navy-30">
     <div class="w-3/4 bg-navy-10 min-h-screen h-full mx-auto flex flex-col flex-grow pb-56 overflow-auto">
-        @for (message of (messages$ | async); track message) {
-            <div> <!-- TODO: I think this div can be removed-->
-            <div class="flex flex-col flex-grow p-4 gap-3">
-                @if (user$ | async; as user) {
-                    <div class="flex flex-nowrap gap-4" [class.flex-row-reverse]="user.uid === message['uid']">
-                            <img class="w-10 h-10 rounded-full" [src]="message['profilePicUrl']"
-                                [alt]="message['name']" />
-                        <div class="flex flex-wrap gap-1 text-neutral-800" [class.flex-row-reverse]="user.uid === message['uid']">
-                                <div class="p-4 rounded-lg max-w-xl flex flex-col justify-between gap-1" [class.bg-amber-200]="user.uid === message['uid']" [class.bg-white]="user.uid !== message['uid']">
-                            @if (message['text'] && message['text'].length > 0){
-                                <div>
-                                    {{message['text']}} 
-                                </div>
-                            }
-                            @if (message['imageUrl'] && message['imageUrl'].length > 0) {
-                                <div class="flex justify-center">
-                                    <img class="max-w-[50vw] max-h-[30vh] rounded-md" [src]="message['imageUrl']" alt="image" />
-                                </div>
-                            }
-                            <div class="flex flex-nowrap justify-end">
-                                <span class="text-neutral-500 text-sm">
-                                    {{message['timestamp'].toDate().toLocaleTimeString()}}
-                                </span>
-                            </div>
-                        </div>
-                        
-                            @if (message['response'] && message['response'].length > 0){
-                                <div class="transition-all opacity-30 hover:opacity-100 hover:border-2 hover:border-navy-200 hover:py-6 gap-1 p-4 rounded-lg max-w-xl flex flex-col justify-between">
-                                <div>
-                                    {{message['response']}}
-                                </div>
-                                <div class="flex flex-nowrap justify-end">
-                                    <span class="text-neutral-500 text-sm">
-                                        ✨ ai generated
-                                    </span>
-                                </div>
-                            </div>
-                            }
-                        </div>
-                        
-                    </div>
-                }
+        @if (messages$ | async; as messages) {
+            <div class="text-xs text-blue-700">
+                debug: messages length = {{ messages?.length ?? 0 }}
             </div>
-        </div>
-    }
+
+            @for (message of messages; track message) {
+                <div class="text-xs text-green-700">
+                    ✅ yes, there is a message
+                </div>
+            }
+        } @else {
+            <div class="text-xs text-red-700">
+                 debug: no messages yet (observable not resolved)
+            </div>
+        }
     </div>
     <div class="bg-navy-10 w-full shadow-[0_35px_60px_-15px_rgba(0,0,0,1)] bottom-0 fixed">
         <div class="flex-wrap flex w-5/6 mx-auto">
