debug: changed text on chat page

--- a/src/app/pages/chat-page/chat-page.component.html
+++ b/src/app/pages/chat-page/chat-page.component.html
@@ -26,7 +26,7 @@
             </div>
             <textarea
                 class="w-4/5 mx-auto h-16 rounded-3xl my-auto overflow-auto text-gray-900 dark:placeholder-gray-400 p-4"
-                placeholder="Write your thoughts here..." [(ngModel)]="this.text"></textarea>
+                placeholder="ARE THESE UPDATES LOGGING AT ALL" [(ngModel)]="this.text"></textarea>
             <button class="w-16 h-16 rounded-full bg-amber-800 my-3" (click)="this.sendTextMessage()">
                 <img class="w-16 h-16" src="../../../assets/send.svg" alt="Send message" />
             </button>
